--- a/index.html
+++ b/index.html
@@ -17,16 +17,37 @@
         <div class="navbar-link">
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Service</a></li>
-                <li><a href="#">contact</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#service">Service</a></li>
+                <li><a href="#career">Career</a></li>
+                <li><a href="#port">Portfolio</a></li>
+                <li><a href="#blog">Blog</a></li>
+                <li><a href="#contect">contact</a></li>
             </ul>
         </div>
     </div>
-    <div class="section">
-        <div id="home">
+    <div class="sections">
+        <section id="home" class="sectionTerms">
             <h2>Home Section</h2>
-        </div>
+        </section>
+        <section id="about" class="sectionTerms">
+            <h2>About Section</h2>
+        </section>
+        <section id="service" class="sectionTerms">
+            <h2>Service Section</h2>
+        </section>
+        <section id="port" class="sectionTerms">
+            <h2>portfolio Section</h2>
+        </section>
+        <section id="career" class="sectionTerms">
+            <h2>careers Section</h2>
+        </section>
+        <section id="blog" class="sectionTerms">
+            <h2>Blog Section</h2>
+        </section>
+        <section id="contect" class="sectionTerms">
+            <h2>Contact Section</h2>
+        </section>
     </div>
     <script src="app.js"></script>
 </body>
